Fix alignment/position of body.

--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -450,7 +450,6 @@ html {
     -ms-text-size-adjust: 100%;
 }
 body {
-    margin: 0;
     height: 100%;
     background-color: #1d1f21;
     color: #c9cacc;
@@ -463,6 +462,11 @@ body {
     flex: 1;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
+
+    max-width: 48rem;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    margin: 0 auto;
 }
 .content {
     position: relative;
